# minniemorpho

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  tag_release.yml
models/: segclr_logreg_bdp.skops
src/minniemorpho/: __init__.py
src/minniemorpho/base/: __init__.py  query.py
src/minniemorpho/level2/: __init__.py  level2.py
src/minniemorpho/models/: __init__.py  model_io.py
src/minniemorpho/query/: __init__.py  base.py  level2.py  segclr.py
src/minniemorpho/segclr/: __init__.py  segclr.py
