[project]
dependencies = [
    "caveclient>=5.25.2",
    "connectomics",
    "scikit-learn>=1.5.1",
    "tqdm-joblib>=0.0.4",
    "gcsfs>=2024.6.1",
]
description = "Add your description here"
name = "minniemorpho"
readme = "README.md"
requires-python = ">=3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]

[tool.uv.sources]
connectomics = { git = "https://github.com/google-research/connectomics.git", rev = "9a1aa4b62de2574f7a083176d194f2a0b894ea6f" }
